# agent_bot

./: .env.example  apicall.md  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.tsbuildinfo
agent_samwise/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
agent_samwise/src/: api.rs  classifier.rs  conversational.rs  error.rs  gemini.rs  lib.rs  models.rs
agent_samwise/src/agent/: mod.rs
agent_samwise/src/audit/: mod.rs
agent_samwise/src/execution/: mod.rs
agent_samwise/src/memory/: context_manager.rs  mod.rs  store.rs  summarizer.rs
agent_samwise/src/planner/: gemini.rs  mod.rs
agent_samwise/src/state/: mod.rs
agent_samwise/src/tools/: mod.rs
agent_samwise/src/verification/: mod.rs
app/: globals.css  layout.tsx
app/(auth)/: actions.ts  auth.ts
app/(auth)/login/: page.tsx
app/(auth)/register/: page.tsx
app/(chat)/: actions.ts  layout.tsx  page.tsx
app/(chat)/api/chat/: route.ts
components/: app-sidebar.tsx  artifact-messages.tsx  chat-skeleton.tsx  chat.tsx  google-sign-in-button.tsx  greeting.tsx  message.tsx  messages.tsx  suggested-actions.tsx  welcome-modal.tsx
lib/auth/: firebase-client.ts  firebase.ts
lib/db/: queries.ts  schema.ts
lib/db/migrations/: 0009_sturdy_spectrum.sql
lib/db/migrations/meta/: _journal.json
