[package]
name = "financial-agent-orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrator"
path = "src/bin/main.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
async-trait = "0.1"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# IDs and types
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Database (for state store + conversational memory)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment configuration
dotenv = "0.15"

# HTTP client for Gemini API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Hash for context snapshots
sha2 = "0.10"

# Global lazy statics
lazy_static = "1.4"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
